# hal

./: .gitignore  .gitmodules  README.md
doc/: sensor-si1145.md
include/avr/: pin_io.h  pwm_hardware.h  pwm_hardware_priv.h  timer.h
include/avr-stdc++/: algorithm  type_traits
include/hal/: adc.h  delay.h  i2c_master.h  usart.h  usart_priv.h  usart_stdout.h
include/hal/avr/: adc_priv.h  pin_io.h  pin_names.h  pwm_hardware.h  timer.h  usart_priv.h
include/hal/communication/: can_message.h
include/hal/input/: button.h  rotary_encoder.h
include/hal/linux/: socketcan.h
include/hal/sensor/: abp2.h  adt7410.h  hyt939.h  mhz19.h  sht3x.h  si1145.h  si7021.h  temp_humi.h  veml6075.h
include/utils/: can_message.h  fifo.h  programspace.h  ringbuffer.h
src/hal/arduino/: i2c_master.cpp
src/hal/avr/: adc_irq.cpp  i2c_master_detail.h  i2c_master_general.cpp  i2c_master_twi.cpp  usart_irq.cpp  usart_stdout.c
src/hal/avr/input/: button.cpp  rotary_encoder.cpp
src/hal/linux/: i2c_master.cpp  socketcan.cpp  usart.cpp
src/hal/sensor/: abp2.cpp  adt7410.cpp  hyt939.cpp  mhz19.cpp  sht3x.cpp  si1145.cpp  si1145_autoexp.cpp  si1145_helper.cpp  si7021.cpp  veml6075.cpp
tests/: CMakeLists.txt  test_ringbuffer.cpp
tests/arduino/i2c-sensor/: platformio.ini
tests/arduino/i2c-sensor/src/: i2c_master.cpp  main.cpp  veml6075.cpp
tests/avr/: CMakeLists.txt  test_adc.cpp  test_button.cpp  test_i2c_hyt939.cpp  test_i2c_si1145.cpp  test_i2c_si7021.cpp  test_rotary_encoder.cpp  test_sensor_light.cpp  test_timer.cpp  test_usart.cpp
tests/linux/: CMakeLists.txt  socketcan_read.cpp  test_sensor_co2.cpp  test_sensor_i2c.cpp  test_sensor_light.cpp  test_sensor_sht3x.cpp  test_usart.cpp
tests/script/: si1145_exposure_eval.py
tests/unit/: CMakeLists.txt  test_canid.cpp  test_fifo.cpp
